# visionhog

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  script.py  srs.conf  stream_traffic.sh  visionhog.db
migrations/: env.py
migrations/versions/: b5bb0baa9d01_create_streams_table.py  create_stream_chunks_table.py
static/css/: style.css
static/templates/: index.html
visionhog/: main.py  models.py
visionhog/api/: app.py
visionhog/rtmp_server/: server.py
visionhog/static/: sse-test.html  video-player.js
visionhog/static/js/: main.js
visionhog/static/templates/: view.html
