[project]
name = "visionhog"
version = "0.1.0"
description = "RTMP server with FastAPI web interface for video streaming"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "opencv-python>=4.8.0.74",
    "numpy>=1.24.3",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "websockets>=11.0.3",
    "ffmpeg-python>=0.2.0",    # For HLS conversion
    "google-genai>=1.15.0",    # For Gemini API
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"
